[gd_scene load_steps=10 format=3 uid="uid://cjbslikfugkjy"]

[ext_resource type="Script" uid="uid://ckm7wofjkwan5" path="res://Codes/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://bfsmc87mr8mhq" path="res://Assets/Images/MMBGHD.png" id="2_cp0ys"]
[ext_resource type="Texture2D" uid="uid://buj88sq28q4tn" path="res://Assets/Images/Buttons/new game.png" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://bbna1whh64ff4" path="res://Assets/Images/Buttons/Load.png" id="4_cp0ys"]
[ext_resource type="Texture2D" uid="uid://ccoegm7rxm68r" path="res://Assets/Images/pugay_logo.png" id="4_n45e2"]
[ext_resource type="Texture2D" uid="uid://c373o2axj0da5" path="res://Assets/Images/Buttons/settings.png" id="5_yhxw7"]
[ext_resource type="Texture2D" uid="uid://dganf2cwjq8p6" path="res://Assets/Images/Buttons/exit.png" id="6_trj04"]
[ext_resource type="AudioStream" uid="uid://cbht6g42eg16f" path="res://Assets/Audio/Menu Music.mp3" id="8_yhxw7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_cp0ys")
modulate_color = Color(0.462291, 0.462291, 0.462291, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -125.0
offset_right = 60.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)

[node name="Start" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("3_opfnp")

[node name="Load" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("4_cp0ys")

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_yhxw7")

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_trj04")

[node name="PugayLogo" type="Sprite2D" parent="."]
position = Vector2(587, 101)
scale = Vector2(2.13889, 2.13889)
texture = ExtResource("4_n45e2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_yhxw7")
volume_db = 4.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
